Added basic base grid
Added basic bootrap grid

--- a/base.html
+++ b/base.html
@@ -24,6 +24,14 @@
 			<p>While you're here, why not poke around?</p>
 		</section>
 	</div>
+	
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-4">col</div>
+			<div class="col-sm-4">col</div>
+			<div class="col-sm-4">col</div>
+		</div>
+	</div>
 
 
 </body>
