--- a/base.html
+++ b/base.html
@@ -12,17 +12,34 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Josefin+Sans|Montserrat" rel="stylesheet">
+
 
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container-fluid intro">
 		<section class="intro-para1">
-			<p>Hi!</p>
-			<p>I'm Josh and this is my website.</p>
+			<p>HELLO</p>
 		</section>
-		<section>
-			<p>While you're here, why not poke around?</p>
+		<section class="intro-para2">
+			<p>This is Josh</p>
 		</section>
+	</div>
+	<div class="container-fluid line-container">
+		<span class="line_divider"></span>
+	</div>
+	<nav class="navbar">
+		<div class="container-fluid">
+			<ul class="nav navbar-nav">
+				<li><a href="#">PROJECTS</a></li>
+				<li><a href="#">VIDEOS</a></li>
+				<li><a href="#">COMICS</a></li>
+			</ul>
+		</div>
+	</nav>
+	<div class="container-fluid line-container">
+		<span class="line_divider"></span>
 	</div>
 	
 	<div class="container-fluid">
@@ -32,6 +49,7 @@
 			<div class="col-sm-4">col</div>
 		</div>
 	</div>
+	
 
 
 </body>
